feat: add "Add to Contacts" action and corresponding translations

--- a/app/src/main/res/menu/item_actions.xml
+++ b/app/src/main/res/menu/item_actions.xml
@@ -16,6 +16,9 @@
         android:id="@+id/open_in_whatsapp_action"
         android:title="@string/open_in_whatsapp" />
     <item
+        android:id="@+id/add_to_contacts_action"
+        android:title="@string/add_to_contacts" />
+    <item
         android:id="@+id/block_action"
         android:title="@string/block" />
     <item
